methods of posType and starType working

--- a/16-01-05 Astrometry.ipynb
+++ b/16-01-05 Astrometry.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -155,21 +155,30 @@
     "        y = self.midpoint-self.y\n",
     "        \n",
     "        self.rho = np.linalg.norm((x,y))\n",
-    "        self.theta = np.degrees(np.arctan(y/x))+90\n",
-    "        # Add 180 deg if in quadrants 2 or 3\n",
-    "        self.theta = (x<0)*180 + self.theta\n",
+    "        self.theta = np.degrees(np.arctan2(y,x))+90\n",
     "        \n",
     "# starType struct is for holding position of a star\n",
     "#  A star has coordinates in camera (in pixels) and also\n",
-    "#  in the observed sky (in arcseconds)\n",
+    "#  in the observed sky (in arcseconds). Theta represents \n",
+    "#  rotation of camera in relation to the sky\n",
     "#starType = namedtuple('starType',\"cam sky error\")\n",
     "class starType:\n",
-    "    def __init__(self, mid = None, error=None, E=None, delta=None):\n",
-    "        self.cam = posType(midpoint = mid)\n",
-    "        self.sky = posType(midpoint = mid)\n",
-    "        self.error = error\n",
+    "    def __init__(self, midpoint = None, E=None, delta=None):\n",
+    "        self.cam = posType(midpoint = midpoint)\n",
+    "        self.sky = posType(midpoint = midpoint)\n",
     "        self.E = E\n",
-    "        self.delta = delta\n"
+    "        self.delta = delta\n",
+    "    \n",
+    "        \n",
+    "    # Convert from polar coords in sky to camera\n",
+    "    def sky2cam(self):\n",
+    "        self.cam.theta = self.sky.theta-self.delta\n",
+    "        self.cam.rho =   self.sky.rho/self.E\n",
+    "        \n",
+    "    # Convert from polar coords in camera to sky    \n",
+    "    def cam2sky(self):\n",
+    "        self.sky.theta = self.cam.theta+self.delta\n",
+    "        self.sky.tho   = self.cam.rho*self.E\n"
    ]
   },
   {
@@ -188,7 +197,7 @@
     "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
     "\n",
     "# Object for the expected star position\n",
-    "expectedPos = starType(mid = imgDim/2)\n",
+    "expectedPos = starType(midpoint = imgDim/2, E = E, delta = delta)\n",
     "\n",
     "# Assigning position values from previous data\n",
     "expectedPos.sky.theta = thetaCs[k]\n",
@@ -197,6 +206,8 @@
     "# Calculate camera locations of expected star pos\n",
     "expectedPos.cam.theta = expectedPos.sky.theta-delta\n",
     "expectedPos.cam.rho = expectedPos.sky.rho/E\n",
+    "\n",
+    "\n",
     "# Converting to cartesian\n",
     "expectedPos.cam.polar2cart()\n",
     "\n",
@@ -218,40 +229,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 16 1 6\n",
+    "\n",
+    "Testing methods of classes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Polar Coords:\n",
-      "50 0\n",
-      "Converting to Cartesian\n",
-      "Cartesian Coords:\n",
-      "256.0 306.0\n",
-      "Converting to Polar\n",
-      "Polar Coords:\n",
-      "50.0 0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/niels/anaconda3/envs/speckle/lib/python3.5/site-packages/ipykernel/__main__.py:44: RuntimeWarning: divide by zero encountered in double_scalars\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Testing transitions between cartesian and polar coordinates\n",
     "\n",
-    "expectedPos = starType(mid = 512/2)\n",
+    "expectedPos = starType(midpoint = 512/2)\n",
     "\n",
-    "expectedPos.cam.rho = 50\n",
-    "expectedPos.cam.theta = 0\n",
+    "expectedPos.cam.x = 256\n",
+    "expectedPos.cam.y = 300\n",
+    "\n",
+    "print(\"Cartesian Coords:\")\n",
+    "print(expectedPos.cam.x, expectedPos.cam.y)\n",
+    "\n",
+    "print(\"Converting to Polar\")\n",
+    "expectedPos.cam.cart2polar()\n",
+    "\n",
     "print(\"Polar Coords:\")\n",
     "print(expectedPos.cam.rho, expectedPos.cam.theta)\n",
     "\n",
@@ -261,12 +267,52 @@
     "print(\"Cartesian Coords:\")\n",
     "print(expectedPos.cam.x, expectedPos.cam.y)\n",
     "\n",
-    "print(\"Converting to Polar\")\n",
-    "expectedPos.cam.cart2polar()\n",
+    "# Mark expected star location on image\n",
+    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),circle_radius, color_secondaryC, circle_border)\n",
     "\n",
-    "print(\"Polar Coords:\")\n",
-    "print(expectedPos.cam.rho, expectedPos.cam.theta)"
+    "# Mark center\n",
+    "cv2.circle(img, (256,256),3, (128,128,128), -1)\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.imshow(img)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Testing transition between camera and sky\n",
+    "\n",
+    "expectedPos = starType(midpoint = 512/2, delta = delta, E = E)\n",
+    "\n",
+    "expectedPos.sky.theta = thetaCs[k]\n",
+    "expectedPos.sky.rho = rhoCs[k]\n",
+    "\n",
+    "print(\"Sky Polar Coords:\")\n",
+    "print(expectedPos.sky.rho, expectedPos.sky.theta)\n",
+    "\n",
+    "print(\"Converting Sky to Cam\")\n",
+    "expectedPos.sky2cam()\n",
+    "\n",
+    "print(\"Cam Polar Coords:\")\n",
+    "print(expectedPos.cam.theta, expectedPos.cam.theta)\n",
+    "\n",
+    "print(\"Old calculation method\")\n",
+    "print(expectedPos.sky.theta-delta,expectedPos.sky.rho/E)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
