Fixed error in delta compensation, mixed up +/- of delta

--- a/16-01-05 Astrometry.ipynb
+++ b/16-01-05 Astrometry.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "# Select which set of data to work with\n",
     "\n",
-    "k = 3\n",
+    "k = 2\n",
     "\n",
     "centroid = centroids[k]"
    ]
@@ -172,12 +172,12 @@
     "        \n",
     "    # Convert from polar coords in sky to camera\n",
     "    def sky2cam(self):\n",
-    "        self.cam.theta = self.sky.theta-self.delta\n",
+    "        self.cam.theta = self.sky.theta+self.delta\n",
     "        self.cam.rho =   self.sky.rho/self.E\n",
     "        \n",
     "    # Convert from polar coords in camera to sky    \n",
     "    def cam2sky(self):\n",
-    "        self.sky.theta = self.cam.theta+self.delta\n",
+    "        self.sky.theta = self.cam.theta-self.delta\n",
     "        self.sky.tho   = self.cam.rho*self.E\n"
    ]
   },
@@ -246,8 +246,10 @@
    "outputs": [],
    "source": [
     "# Testing transitions between cartesian and polar coordinates\n",
+    "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
     "\n",
-    "expectedPos = starType(midpoint = 512/2)\n",
+    "# Object for the expected star position\n",
+    "expectedPos = starType(midpoint = imgDim/2, E = E, delta = delta)\n",
     "\n",
     "expectedPos.cam.x = 256\n",
     "expectedPos.cam.y = 300\n",
@@ -285,9 +287,11 @@
    },
    "outputs": [],
    "source": [
-    "# Testing transition between camera and sky\n",
+    "# Testing transitions between cartesian and polar coordinates\n",
+    "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
     "\n",
-    "expectedPos = starType(midpoint = 512/2, delta = delta, E = E)\n",
+    "# Object for the expected star position\n",
+    "expectedPos = starType(midpoint = imgDim/2, E = E, delta = 0)\n",
     "\n",
     "expectedPos.sky.theta = thetaCs[k]\n",
     "expectedPos.sky.rho = rhoCs[k]\n",
@@ -301,8 +305,20 @@
     "print(\"Cam Polar Coords:\")\n",
     "print(expectedPos.cam.theta, expectedPos.cam.theta)\n",
     "\n",
-    "print(\"Old calculation method\")\n",
-    "print(expectedPos.sky.theta-delta,expectedPos.sky.rho/E)\n"
+    "print(\"Converting to Cartesian\")\n",
+    "expectedPos.cam.polar2cart()\n",
+    "\n",
+    "print(\"Cartesian Coords:\")\n",
+    "print(expectedPos.cam.x, expectedPos.cam.y)\n",
+    "\n",
+    "# Mark expected star location on image\n",
+    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),circle_radius, color_secondaryC, circle_border)\n",
+    "\n",
+    "# Mark center\n",
+    "cv2.circle(img, (256,256),3, (128,128,128), -1)\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.imshow(img)"
    ]
   },
   {
