correct calculation of angular error

--- a/16-01-05 Astrometry.ipynb
+++ b/16-01-05 Astrometry.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "# Select which set of data to work with\n",
     "\n",
-    "k = 2\n",
+    "k = 3\n",
     "\n",
     "centroid = centroids[k]"
    ]
@@ -114,23 +114,14 @@
    "source": [
     "# Functions & structs used in this file\n",
     "\n",
-    "# convert float pixel indices to rounded, uint8 values\n",
+    "# convert float pixel indices to rounded, int16 values\n",
     "def pixelRound(val):\n",
     "    return (np.round(val)).astype(np.int16)\n",
     "\n",
-    "# convert theta and rho values to image x and y coordinates\n",
-    "def polar2cart(rho, theta, imgSize):\n",
-    "    midpoint = imgSize/2 # Centered on midpoint of image\n",
-    "    x = midpoint + (rho * np.cos(np.radians(theta-90)))\n",
-    "    # Subtraction because positive direction of image is down on screen\n",
-    "    y = midpoint - (rho * np.sin(np.radians(theta-90)))\n",
-    "    \n",
-    "    return (x,y)\n",
-    "\n",
-    "# posType struct is for holding the position of anything\n",
+    "# position class is for holding the position of anything\n",
     "#  Position may be represented in Cartesian or Polar coordinates\n",
     "#  Want to be able to store both kinda of coordinates\n",
-    "class posType:\n",
+    "class position:\n",
     "    def __init__(self, midpoint=None, theta=None, rho=None, x=None, y=None):\n",
     "        self.theta = theta\n",
     "        self.rho = rho\n",
@@ -156,16 +147,18 @@
     "        \n",
     "        self.rho = np.linalg.norm((x,y))\n",
     "        self.theta = np.degrees(np.arctan2(y,x))+90\n",
+    "        # Add 360 deg if theta is a negative angle\n",
+    "        self.theta = self.theta + 360*(self.theta<0) \n",
     "        \n",
-    "# starType struct is for holding position of a star\n",
+    "# star class is for holding position of a star\n",
     "#  A star has coordinates in camera (in pixels) and also\n",
     "#  in the observed sky (in arcseconds). Theta represents \n",
     "#  rotation of camera in relation to the sky\n",
     "#starType = namedtuple('starType',\"cam sky error\")\n",
-    "class starType:\n",
+    "class star:\n",
     "    def __init__(self, midpoint = None, E=None, delta=None):\n",
-    "        self.cam = posType(midpoint = midpoint)\n",
-    "        self.sky = posType(midpoint = midpoint)\n",
+    "        self.cam = position(midpoint = midpoint)\n",
+    "        self.sky = position(midpoint = midpoint)\n",
     "        self.E = E\n",
     "        self.delta = delta\n",
     "    \n",
@@ -178,7 +171,13 @@
     "    # Convert from polar coords in camera to sky    \n",
     "    def cam2sky(self):\n",
     "        self.sky.theta = self.cam.theta-self.delta\n",
-    "        self.sky.tho   = self.cam.rho*self.E\n"
+    "        self.sky.rho   = self.cam.rho*self.E\n",
+    "\n",
+    "# Circular marking for noting locations of objects\n",
+    "marker = namedtuple('marker',\"stroke radius color\")\n",
+    "centroidMarker = marker(stroke=1,radius=10,color=(255,0,0))\n",
+    "expectedMarker = marker(stroke=1,radius=10,color=(0,255,0))\n",
+    "observedMarker = marker(stroke=1,radius=5,color=(0,0,255))"
    ]
   },
   {
@@ -197,32 +196,26 @@
     "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
     "\n",
     "# Object for the expected star position\n",
-    "expectedPos = starType(midpoint = imgDim/2, E = E, delta = delta)\n",
+    "expectedPos = star(midpoint = imgDim/2, E = E, delta = delta)\n",
+    "# Object for the closest centroid to expected star position\n",
+    "observedPos = star(midpoint = imgDim/2, E = E, delta = delta)\n",
     "\n",
     "# Assigning position values from previous data\n",
     "expectedPos.sky.theta = thetaCs[k]\n",
     "expectedPos.sky.rho = rhoCs[k]\n",
     "\n",
     "# Calculate camera locations of expected star pos\n",
-    "expectedPos.cam.theta = expectedPos.sky.theta-delta\n",
-    "expectedPos.cam.rho = expectedPos.sky.rho/E\n",
-    "\n",
+    "expectedPos.sky2cam()\n",
     "\n",
     "# Converting to cartesian\n",
     "expectedPos.cam.polar2cart()\n",
     "\n",
-    "# Parameters for marking objects\n",
-    "circle_radius = 11 # Radius of circle around location\n",
-    "circle_border = 1 # Border of circle around location\n",
-    "color_centroid = (255,0,0) # Color of centroid marker\n",
-    "color_secondaryC = (0,255,0) # Color of expected secondary star location\n",
-    "\n",
     "# Mark centroid locations on image\n",
-    "cv2.circle(img, (centroid[0,0].astype(np.uint16),centroid[0,1].astype(np.uint16)), circle_radius, color_centroid, circle_border)\n",
-    "cv2.circle(img, (centroid[1,0].astype(np.uint16),centroid[1,1].astype(np.uint16)), circle_radius, color_centroid, circle_border)\n",
+    "cv2.circle(img, (centroid[0,0].astype(np.uint16),centroid[0,1].astype(np.uint16)), centroidMarker.radius, centroidMarker.color, centroidMarker.stroke)\n",
+    "cv2.circle(img, (centroid[1,0].astype(np.uint16),centroid[1,1].astype(np.uint16)), centroidMarker.radius, centroidMarker.color, centroidMarker.stroke)\n",
     "\n",
     "# Mark expected star location on image\n",
-    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),circle_radius, color_secondaryC, circle_border)\n",
+    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),expectedMarker.radius, expectedMarker.color, expectedMarker.stroke)\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(img)"
@@ -238,18 +231,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
     "# Testing transitions between cartesian and polar coordinates\n",
     "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
     "\n",
     "# Object for the expected star position\n",
-    "expectedPos = starType(midpoint = imgDim/2, E = E, delta = delta)\n",
+    "expectedPos = star(midpoint = imgDim/2, E = E, delta = delta)\n",
     "\n",
     "expectedPos.cam.x = 256\n",
     "expectedPos.cam.y = 300\n",
@@ -270,7 +261,7 @@
     "print(expectedPos.cam.x, expectedPos.cam.y)\n",
     "\n",
     "# Mark expected star location on image\n",
-    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),circle_radius, color_secondaryC, circle_border)\n",
+    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),expectedMarker.radius, expectedMarker.color, expectedMarker.stroke)\n",
     "\n",
     "# Mark center\n",
     "cv2.circle(img, (256,256),3, (128,128,128), -1)\n",
@@ -280,18 +271,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
     "# Testing transitions between cartesian and polar coordinates\n",
     "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
     "\n",
     "# Object for the expected star position\n",
-    "expectedPos = starType(midpoint = imgDim/2, E = E, delta = 0)\n",
+    "expectedPos = star(midpoint = imgDim/2, E = E, delta = 0)\n",
     "\n",
     "expectedPos.sky.theta = thetaCs[k]\n",
     "expectedPos.sky.rho = rhoCs[k]\n",
@@ -312,10 +301,63 @@
     "print(expectedPos.cam.x, expectedPos.cam.y)\n",
     "\n",
     "# Mark expected star location on image\n",
-    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),circle_radius, color_secondaryC, circle_border)\n",
+    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),expectedMarker.radius, expectedMarker.color, expectedMarker.stroke)\n",
     "\n",
     "# Mark center\n",
     "cv2.circle(img, (256,256),3, (128,128,128), -1)\n",
+    "\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "# 16 1 7\n",
+    "\n",
+    "Finding centroids closest to expected location\n",
+    "\n",
+    "Finding errors between expected and closest centroid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Finding closest centroid\n",
+    "\n",
+    "# Initialize distance list\n",
+    "distance = [math.inf,math.inf]\n",
+    "\n",
+    "# Check distance to each centroid\n",
+    "for i in np.arange(2):\n",
+    "    distance[i] = np.linalg.norm((expectedPos.cam.x-centroid[i,0],expectedPos.cam.y-centroid[i,1]))\n",
+    "\n",
+    "# Find index of minimum distance    \n",
+    "index = (distance.index(min(distance)))\n",
+    "\n",
+    "# Centroid with minimum distance becomes the observed position\n",
+    "(observedPos.cam.x,observedPos.cam.y) = (centroid[index,0],centroid[index,1])\n",
+    "\n",
+    "# Create Blank Image\n",
+    "img = np.zeros((imgDim,imgDim,3), np.uint8)\n",
+    "\n",
+    "# Mark centroid locations on image\n",
+    "cv2.circle(img, (centroid[0,0].astype(np.uint16),centroid[0,1].astype(np.uint16)), centroidMarker.radius, centroidMarker.color, centroidMarker.stroke)\n",
+    "cv2.circle(img, (centroid[1,0].astype(np.uint16),centroid[1,1].astype(np.uint16)), centroidMarker.radius, centroidMarker.color, centroidMarker.stroke)\n",
+    "\n",
+    "# Mark expected star location on image\n",
+    "cv2.circle(img, (pixelRound(expectedPos.cam.x),pixelRound(expectedPos.cam.y)),expectedMarker.radius, expectedMarker.color, expectedMarker.stroke)\n",
+    "\n",
+    "# Mark observed star location on image\n",
+    "cv2.circle(img, (pixelRound(observedPos.cam.x),pixelRound(observedPos.cam.y)),observedMarker.radius, observedMarker.color, observedMarker.stroke)\n",
     "\n",
     "plt.figure(figsize=(10,10))\n",
     "plt.imshow(img)"
@@ -328,7 +370,47 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculating percent errors in position\n",
+    "\n",
+    "# Calculate polar coordinates of observed star\n",
+    "observedPos.cam.cart2polar()\n",
+    "\n",
+    "# Calculate error in radius\n",
+    "errorRadius = observedPos.cam.rho-expectedPos.cam.rho\n",
+    "\n",
+    "# Calculate error in angle\n",
+    "errorTheta  = observedPos.cam.theta-expectedPos.cam.theta\n",
+    "while(errorTheta<-180): # Get angle between -180 to 180\n",
+    "    errorTheta += 360\n",
+    "while(errorTheta>180):  # Get angle between -180 to 180\n",
+    "    errorTheta -= 360\n",
+    "\n",
+    "# Calculate error in cartesian distance\n",
+    "errorDistance = distance[index]\n",
+    "                          \n",
+    "print(errorRadius)                 \n",
+    "print(errorTheta)\n",
+    "print(errorDistance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Calculating astrometric data of observed stars\n",
+    "print(observedPos.cam.rho, observedPos.cam.theta)\n",
+    "# Convert camera view of \n",
+    "observedPos.cam2sky()\n",
+    "\n",
+    "# View astrometric data of observed stars\n",
+    "print(expectedPos.sky.rho, expectedPos.sky.theta)\n",
+    "print(observedPos.sky.rho, observedPos.sky.theta)"
+   ]
   }
  ],
  "metadata": {
