Simulation working properly, units are correct

--- a/dev/16-2-19 Diffraction Limit.ipynb
+++ b/dev/16-2-19 Diffraction Limit.ipynb
@@ -9,11 +9,21 @@
     "Simulating the output of a prime focus telescope given an input image. \n",
     "\n",
     "## Kitt Peak 2.1m Telescope\n",
-    "From http://www.noao.edu/outreach/kptour/2_1_m.html, this telescope has the following specs:\n",
+    "From http://www-kpno.kpno.noao.edu/kpno-misc/2m_params.html, this telescope has the following specs:\n",
     "\n",
-    "- Diameter = 2.1m = 2100mm\n",
-    "- Focal Ratio = f/2.63\n",
-    "- Focal Length = 2100mm*2.63 = 5523mm\n",
+    "- Diameter = 2133.0mm\n",
+    "- Radius of curvature = 11168.4mm\n",
+    " - Effective Focal Length = R/2 = 5584mm\n",
+    " - Focal Ratio = 5584/2133 = f\\2.63\n",
+    "\n",
+    "From http://www.jdso.org/volume11/number1s/Genet_234_244.pdf, telescope was set up differently for speckle observation. Adding secondary mirror :\n",
+    "\n",
+    "- Primary Diameter = 2.1m = 2133.0mm\n",
+    "- Focal Ratio = f/7.6\n",
+    " - Focal Length = 2133.0mm*7.6 = 16211mm\n",
+    "- 8x Barlow\n",
+    " - Focal Ratio = f/(7.6*8) = f/60.8\n",
+    " - Focal Length = 16211mm*8 = 129.69m\n",
     "\n",
     "## Andora Luca-R\n",
     "From https://www.andor.com/pdfs/specifications/Andor_Luca-R_604_Specifications.pdf\n",
@@ -22,33 +32,131 @@
     " - Simplifying to 1000 x 1000 Pixels\n",
     "- Pixel Size = 8um X 8um\n",
     "\n",
+    "For KPNO run, camera was set up in alternative mode\n",
+    "\n",
+    "- 2x2 Binning\n",
+    " - Pixel size = 16um X 16um\n",
+    " - Sensor size = 512 X 512 Pixels\n",
+    "\n",
     "## Calcs:\n",
-    "- Input image is in units of angles [ex: arcsec], represents the full input field of view\n",
-    "- Aperture is in units of wavelength [ex: um]\n",
-    "- Output image is in units of pixels"
+    "- Input image is in units of angles, represents the full input field of view\n",
+    "    - This is re-sampled to image it on a pixel scale\n",
+    "        - $\\hbox{image scale} = \\frac{206262}{focal length} = \\frac{206262arcsec}{129.69*10^{3}} = 1.59 \\frac{arcsec}{mm} $\n",
+    "        - $\\hbox{pixel scale} = 1.59 \\frac{as}{mm} * 16*10^{-3} \\frac{mm}{pixel} = 25.44 \\frac{marcsec}{pixel}$\n",
+    "        - If sky input is in units of pixel scale [ex: 25.44 marcsec], then no re-sampling required\n",
+    " \n",
+    "- Aperture is in length units [m]\n",
+    "    - Need to calculate the \"effective\" size of the aperture, taking into account effects of lens focal length and light wavelength:\n",
+    "        - $ \\textrm{Effective Aperture Diameter}=\\frac{(\\textrm{Aperture Diameter})}{(\\lambda)(\\textrm{Focal Length})} $\n",
+    "        - $ D = \\frac{(2.133m)}{(0.8*10^{-6}m)(129.69m)} = 20599 \\frac{1}{m}$\n",
+    "    - This is the radius of a circle that gives the first null of the corresponding airy disc to be at $ r = \\frac{1.22}{D} = \\frac{1.22}{20599 \\frac{1}{m}} = 59.34*10^{-6}m $\n",
+    "        - In pixels, this corresponds to $\\frac{59.34*10^{-6}m}{8*10^{-6}} = 7.42 pixels $\n",
+    "    - To simulate the imaging sensor, we need the sample units of the FFT of our aperture image to be the size of a pixel. For Andora Luca-R, pixel is 8um. Each sample of a 2D FFT represents 2/L (L = total sample size of input image). So we want total spatial sampling range = $\\frac{1}{L} = 8*10^{-6} -> L = \\frac{1}{8*10^{-6}} = 125*10^{3}$\n",
+    "        - If this is sampled with 512 pixels, each pixel represents $\\frac{125*10^{-3}}{512} = 244.14 \\frac{1}{m}$. So the diameter of the aperture = $D_{s} = \\frac{20599}{244.14} = 84pixels$\n",
+    "    - The FFT of this is calculated, PSF is calculated as square of magnitude\n",
+    "    - Sanity check: first null occurs at 7 pixels away from center (256)\n",
+    " \n",
+    "- Input and aperture PSF are convolved\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# Includes\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy.fftpack import fft2, ifft2\n",
+    "from scipy.fftpack import fft2, ifft2, fftshift\n",
+    "from scipy.signal import fftconvolve\n",
+    "from scipy.signal import argrelextrema\n",
     "\n",
     "%matplotlib inline\n",
-    "# Defining Convolution Function\n",
+    "\n",
+    "# Image specs\n",
+    "size = 512\n",
+    "center = int(size/2)\n",
     "\n",
     "# Creating Input Image\n",
+    "# For KP 2.1m telescope, input image is in units of 25.44 milliarcseconds\n",
+    "input_img = np.zeros((size,size)) # Empty input \n",
+    "input_img[center,center-10] = 255 # Place star at -0.254 arcsec\n",
+    "input_img[center,center+10] = 255 # Place star at +0.254 arcsec\n",
     "\n",
     "# Creating Aperture Image\n",
+    "# Aperture Specifications:\n",
+    "diameter = 2.133 # Mirror diameter in meters\n",
+    "focal_length = 129.69 # Effective focal length in meters\n",
+    "wavelength = 0.8E-6 # Wavelength of light\n",
+    "pixel = 8E-6 # Dimension of a pixel\n",
     "\n",
-    "# Calculate Output Image"
+    "# Calculating units of aperture image\n",
+    "spatial_sample_range = 1/pixel # Total spatial sample range\n",
+    "spatial_sample = spatial_sample_range/size # Spatial size of a sample\n",
+    "\n",
+    "# Calculating aperture image dimensions\n",
+    "# Effective diameter of aperture\n",
+    "diameter_eff = diameter/(focal_length*wavelength) \n",
+    "# Spatially sampled aperture diameter\n",
+    "diameter_eff_sampled = diameter_eff/spatial_sample\n",
+    "# Spatially sampled aperture radius\n",
+    "radius_eff_sampled = diameter_eff_sampled/2 \n",
+    "\n",
+    "# Draw aperture image\n",
+    "# Create meshgrid of coordinates\n",
+    "yy, xx = np.mgrid[:size, :size] \n",
+    "# Calculate grid of distances from circle center\n",
+    "circle = (xx - center) ** 2 + (yy - center) ** 2 \n",
+    "# Draw boolean circle\n",
+    "circle = circle < (radius_eff_sampled)**2 \n",
+    "# Convert boolean circle to int\n",
+    "aperture_img = circle.astype(np.int64) \n",
+    "\n",
+    "# Calculate Output Image\n",
+    "# Calculate PSF of aperture\n",
+    "aperture_psf = fftshift(np.power(np.abs(fft2(aperture_img)),2)) \n",
+    "# Convolve PSF with input image\n",
+    "sensor_img = fftconvolve(input_img,aperture_psf)\n",
+    "# Save the center 512x512 image\n",
+    "sensor_img = sensor_img[center:center+size,center:center+size] \n",
+    "\n",
+    "#Plots\n",
+    "plt.figure(figsize = (16,6), dpi = 100)\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(aperture_img)\n",
+    "plt.title(\"Aperture Image\")\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(aperture_psf)\n",
+    "plt.title(\"Aperture PSF\")\n",
+    "\n",
+    "plt.figure(figsize = (16,6), dpi = 100)\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(input_img)\n",
+    "plt.title(\"Input Image\")\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(sensor_img)\n",
+    "plt.title(\"Sensor Image\")\n",
+    "\n",
+    "# Show center row of aperture PSF and sensor's image\n",
+    "plt.figure(figsize = (20,7), dpi = 100)\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot((aperture_psf[center,:]))\n",
+    "plt.title(\"Aperture PSF (Center Row)\")\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot((sensor_img[center,:]))\n",
+    "plt.title(\"Output Image (Center Row)\")\n",
+    "\n",
+    "# Print incides of minimum (centered on 0)\n",
+    "# Used to find nulls of airy disc\n",
+    "print(\"Aperture PSF Minima [Zero Centered]\")\n",
+    "print(np.subtract(argrelextrema(aperture_psf[center], np.less),center))"
    ]
   }
  ],
