Changes complete. Now using meshgrids for drawing circles

--- a/dev/16-2-19 Diffraction Limit.ipynb
+++ b/dev/16-2-19 Diffraction Limit.ipynb
@@ -137,33 +137,16 @@
     "circle_s= circle_s.astype(np.int64)\n",
     "# Save aperture image in units of meters\n",
     "aperture_screen_s = circle_s\n",
+    "# Calculate effective size of sampled aperture image in meters\n",
+    "X_aperture_s_meff = focal_length*wavelength/pixel\n",
     "\n",
-    "\n",
-    "# Calculating units of aperture image\n",
-    "\n",
-    "\n",
-    "# Calculating aperture image dimensions\n",
-    "# Effective diameter of aperture in pixels\n",
-    "#diameter_eff = diameter/(focal_length*wavelength) \n",
-    "# Spatially sampled aperture diameter\n",
-    "#diameter_eff_sampled = diameter_eff/spatial_sample\n",
-    "# Spatially sampled aperture radius\n",
-    "#radius_eff_sampled = diameter_eff_sampled/2 \n",
-    "\n",
-    "# Sample the aperture image [m] into a scale that\n",
-    "#  when FFTed, gives the proper scale for pixels\n",
-    "\n",
-    "# Calculate Output Image\n",
+    "## Calculate Output Images\n",
     "# Calculate PSF of aperture\n",
     "aperture_psf = fftshift(np.power(np.abs(fft2(aperture_screen_s)),2)) \n",
     "# Convolve PSF with input image\n",
-    "#sensor_img = fftconvolve(input_img,aperture_psf)\n",
-    "# Save the center 512x512 image\n",
-    "#sensor_img = sensor_img[center:center+size,center:center+size] \n",
-    "\n",
-    "\n",
-    "# Effective size of sampled image in meters\n",
-    "print(diameter_m/(diameter_s/X_aperture_s))"
+    "sensor_img = fftconvolve(input_img,aperture_psf)\n",
+    "# Save the center nxy by nxy image\n",
+    "sensor_img = sensor_img[center:center+nxy,center:center+nxy] "
    ]
   },
   {
@@ -177,53 +160,41 @@
     "#Plots\n",
     "colormap = \"gray\"\n",
     "\n",
-    "plt.figure(figsize = (16,6), dpi = 100)\n",
+    "\n",
+    "plt.figure(figsize = (14,6), dpi = 100)\n",
     "plt.subplot(1,2,1)\n",
-    "plt.imshow(aperture_screen_m, cmap=colormap, \n",
-    "           extent = (x_aperture_m.min(),x_aperture_m.max(),\n",
-    "                     x_aperture_m.min(),x_aperture_m.max()))\n",
-    "#plt.pcolormesh(xx_m, yy_m, aperture_screen_m)\n",
+    "plt.imshow(aperture_screen_s, cmap=colormap, \n",
+    "           extent = (-X_aperture_s_meff/2,X_aperture_s_meff/2,\n",
+    "                     -X_aperture_s_meff/2,X_aperture_s_meff/2))\n",
     "plt.xlabel(\"[m]\")\n",
     "plt.ylabel(\"[m]\")\n",
-    "plt.grid(\"on\")\n",
     "plt.title(\"Aperture Screen\")\n",
     "\n",
     "plt.subplot(1,2,2)\n",
-    "plt.imshow(aperture_screen_s, cmap=colormap, \n",
-    "           extent = (x_aperture_s.min(),x_aperture_s.max(),\n",
-    "                     x_aperture_s.min(),x_aperture_s.max()))\n",
-    "#plt.pcolormesh(xx_m, yy_m, aperture_screen_m)\n",
-    "plt.xlabel(\"[1/m]\")\n",
-    "plt.ylabel(\"[1/m]\")\n",
-    "plt.grid(\"on\")\n",
-    "plt.title(\"Aperture Screen\")\n",
-    "#plt.imshow(np.log10(aperture_psf), cmap=colormap)\n",
-    "#plt.xlabel(\"[pixels]\")\n",
-    "#plt.ylabel(\"[pixels]\")\n",
-    "#plt.title(\"Aperture PSF\")\n",
+    "plt.imshow(np.log10(aperture_psf), cmap=colormap)\n",
+    "plt.xlabel(\"[pixels]\")\n",
+    "plt.ylabel(\"[pixels]\")\n",
+    "plt.title(\"Aperture PSF\")\n",
     "\n",
-    "#plt.figure(figsize = (16,6), dpi = 100)\n",
-    "#plt.subplot(1,2,1)\n",
+    "plt.figure(figsize = (16,6), dpi = 100)\n",
+    "plt.subplot(1,2,1)\n",
     "#plt.imshow(input_img, cmap=colormap, extent = (-6.513,6.513,-6.513,6.513))\n",
-    "#plt.xlabel(\"[arcsec]\")\n",
-    "#plt.ylabel(\"[arcsec]\")\n",
-    "#plt.title(\"Input Image\")\n",
+    "plt.imshow(input_img, cmap=colormap, extent = (-nxy*platescale/2,nxy*platescale/2,\n",
+    "                                               -nxy*platescale/2,nxy*platescale/2))\n",
+    "plt.xlabel(\"[arcsec]\")\n",
+    "plt.ylabel(\"[arcsec]\")\n",
+    "plt.title(\"Input Image\")\n",
     "\n",
-    "#plt.subplot(1,2,2)\n",
-    "#plt.imshow(sensor_img, cmap=colormap)\n",
-    "#plt.xlabel(\"[pixels]\")\n",
-    "#plt.ylabel(\"[pixels]\")\n",
-    "#plt.title(\"Sensor Image\")\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(sensor_img, cmap=colormap)\n",
+    "plt.xlabel(\"[pixels]\")\n",
+    "plt.ylabel(\"[pixels]\")\n",
+    "plt.title(\"Sensor Image\")\n",
     "\n",
     "# Show center row of aperture PSF and sensor's image\n",
-    "#plt.figure(figsize = (20,7), dpi = 100)\n",
-    "#plt.subplot(1,2,1)\n",
-    "#plt.plot((aperture_psf[center,:]))\n",
-    "#plt.title(\"Aperture PSF (Center Row)\")\n",
-    "\n",
-    "#plt.subplot(1,2,2)\n",
-    "#plt.plot((sensor_img[center,:]))\n",
-    "#plt.title(\"Output Image (Center Row)\")\n",
+    "plt.figure(figsize = (20,7), dpi = 100)\n",
+    "plt.plot((aperture_psf[center,:]))\n",
+    "plt.title(\"Aperture PSF (Center Row)\")\n",
     "\n",
     "# List distances from center of nulls in PSF\n",
     "print(\"Aperture PSF Null Radii\")\n",
@@ -244,6 +215,7 @@
    },
    "outputs": [],
    "source": [
+    "# FFT Sanity Check\n",
     "from scipy.fftpack import fft\n",
     "\n",
     "# Continuous Signal: y = sin(2pi*t) [Frequency = 1Hz]\n",
