removed calculations of unscaled aperture image

--- a/dev/16-2-19 Diffraction Limit.ipynb
+++ b/dev/16-2-19 Diffraction Limit.ipynb
@@ -94,26 +94,8 @@
     "input_img[y1,x1] = 255 \n",
     "input_img[y2,x2] = 255 \n",
     "\n",
-    "## Drawing aperture image in [m] scale first\n",
-    "# Mirror diameter in [m]\n",
-    "diameter_m = 2.133 \n",
-    "# total X range [m]\n",
-    "X_aperture_m = 4 \n",
-    "# dx values for initial aperture drawing [m]\n",
-    "dx_aperture_m =  X_aperture_m/nxy\n",
-    "# Coordinates of [m] \n",
-    "x_aperture_m = np.arange(0,X_aperture_m,dx_aperture_m) - X_aperture_m/2\n",
-    "# Create meshgrid of coordinates\n",
-    "xx_m,yy_m = np.meshgrid(x_aperture_m,x_aperture_m)\n",
-    "# Calculate grid of distances from circle center\n",
-    "circle_m = (xx_m) ** 2 + (yy_m) ** 2 \n",
-    "# Draw boolean circle\n",
-    "circle_m = circle_m < (diameter_m/2)**2 \n",
-    "# Convert boolean circle to int\n",
-    "circle_m= circle_m.astype(np.int64)\n",
-    "aperture_screen_m = circle_m\n",
-    "\n",
     "## Calculate scaling factors for sampled aperture image\n",
+    "diameter_m = 2.133 # Mirror diameter in [m]\n",
     "pixel = 8E-6 # Dimension of a pixel\n",
     "focal_length = 129.69 # Effective focal length in meters\n",
     "wavelength = 0.8E-6 # Wavelength of light\n",
@@ -153,7 +135,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -176,7 +159,7 @@
     "plt.ylabel(\"[pixels]\")\n",
     "plt.title(\"Aperture PSF\")\n",
     "\n",
-    "plt.figure(figsize = (16,6), dpi = 100)\n",
+    "plt.figure(figsize = (14,6), dpi = 100)\n",
     "plt.subplot(1,2,1)\n",
     "#plt.imshow(input_img, cmap=colormap, extent = (-6.513,6.513,-6.513,6.513))\n",
     "plt.imshow(input_img, cmap=colormap, extent = (-nxy*platescale/2,nxy*platescale/2,\n",
