--- a/dev/16-3-4 Atmospheric Distortion.ipynb
+++ b/dev/16-3-4 Atmospheric Distortion.ipynb
@@ -124,9 +124,9 @@
     "\n",
     "## Phase screen creation:\n",
     "# Total array sample size\n",
-    "d_aperture = 12.969\n",
+    "d_aperture = X_aperture_s_meff\n",
     "# Fried parameter [m]\n",
-    "r0 = 0.15\n",
+    "r0 = 0.2\n",
     "# Spatial sample resolution\n",
     "dxy = d_aperture/nxy\n",
     "# Spatial frequency resolution\n",
@@ -171,7 +171,7 @@
     "# Save center 512x512 image\n",
     "psf = psf[center:center+nxy,center:center+nxy] \n",
     "# Gamma correcting PSF\n",
-    "gamma = 2.5\n",
+    "gamma = 1\n",
     "psf = np.power(np.divide(psf,psf.max()),gamma)\n",
     "\n",
     "# Convolve atmosphere PSF with input image using FFT\n",
@@ -227,6 +227,87 @@
     "plt.xlabel(\"[pixels]\")\n",
     "plt.ylabel(\"[pixels]\")\n",
     "plt.title(\"Sensor Image\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "## Checking phase mask fluctuation over Fried cell\n",
+    "# At each point possible in the image (away from edges)\n",
+    "#  Save pixels within a square that bounds Fried cell\n",
+    "#  Mask this square by a circular mask\n",
+    "#  Calculate total RMS variance of masked image\n",
+    "\n",
+    "# Calculate r0 in pixels\n",
+    "r0_p = int(np.round((r0/d_aperture)*nxy))\n",
+    "r0_p_center = (r0_p-1)/2\n",
+    "\n",
+    "\n",
+    "# Calculate indices to loop over\n",
+    "i_loop = np.arange(0+int(r0_p/2),nxy-int(r0_p/2))\n",
+    "print(\"r0_p_center=\",r0_p_center)\n",
+    "print(\"int(r0_p/2)=\",int(r0_p/2))\n",
+    "print(\"i_loop=\",i_loop)\n",
+    "print(\"\")\n",
+    "\n",
+    "# Create circular mask image\n",
+    "xx,yy = np.meshgrid(np.arange(0,r0_p),np.arange(0,r0_p))\n",
+    "r0_mask = np.sqrt(np.add(np.power(xx-r0_p_center,2),np.power(yy-r0_p_center,2)))\n",
+    "r0_mask = 1*(r0_mask<r0_p/2)\n",
+    "\n",
+    "# Create array to hold RMS variations\n",
+    "r0_rms = np.zeros((len(i_loop),len(i_loop)))\n",
+    "\n",
+    "#test = np.zeros((nxy+10,nxy+10))\n",
+    "#for i in np.arange(nxy+10):\n",
+    "#    for j in np.arange(nxy+10):\n",
+    "#        test[i,j] = i+j\n",
+    "#print(test)\n",
+    "\n",
+    "\n",
+    "# Loop through y values\n",
+    "for i in np.arange(len(i_loop)):\n",
+    "    #Calculate bounds of Y data to be copied\n",
+    "    y = i_loop[i]\n",
+    "    y_bounds = [y-int(r0_p/2),y+int(r0_p/2)+1]\n",
+    "    \n",
+    "    # Loop through x values\n",
+    "    for j in np.arange(len(i_loop)):\n",
+    "        x = i_loop[j]\n",
+    "        x_bounds = [x-int(r0_p/2),x+int(r0_p/2)+1]\n",
+    "        \n",
+    "#        print(\"y_bounds=\",y_bounds,\"x_bounds\",x_bounds)\n",
+    "\n",
+    "        # Mask nearby values to new image\n",
+    "        phase_masked = phase_screen[y_bounds[0]:y_bounds[1],x_bounds[0]:x_bounds[1]]\n",
+    "        phase_masked = np.multiply(phase_masked,r0_mask)  \n",
+    "        \n",
+    "\n",
+    "        # Calculate RMS variation of masked image\n",
+    "        r0_rms[i,j]=np.power(np.mean(np.power(phase_masked,2)),0.5)\n",
+    "#        print(r0_rms[i,j])\n",
+    "\n",
+    "r0_rms_avg = np.mean(r0_rms)\n",
+    "print(r0_rms_avg)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(r0_p)\n",
+    "print(np.shape(phase_masked))"
    ]
   },
   {
