--- a/dev/16-3-4 Atmospheric Distortion.ipynb
+++ b/dev/16-3-4 Atmospheric Distortion.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "## Parameters\n",
     "# Image specs\n",
-    "nxy = 64\n",
+    "nxy = 512\n",
     "center = int(nxy/2)"
    ]
   },
@@ -140,7 +140,7 @@
     "# Radius from center meshgrid\n",
     "rr = (np.sqrt(np.power(xx,2)+np.power(yy,2)))\n",
     "# Calculate Kolmogorov spectral density\n",
-    "alpha = 1/64\n",
+    "alpha = 1/5000\n",
     "phase_PSD = np.power(rr,-11/3)\n",
     "phase_PSD = np.multiply(alpha*0.023/(r0**(5/3)),phase_PSD)\n",
     "# Set DC component to 0 (previous calc attempts to set to 1/0)\n",
@@ -193,7 +193,7 @@
     "plt.colorbar()\n",
     "plt.title(\"Atmosphere Phase Shift (wrapped)\")\n",
     "plt.subplot(1,2,2)\n",
-    "plt.imshow(atmosphere_psf, cmap=colormap)\n",
+    "plt.imshow(np.log10(atmosphere_psf), cmap=colormap)\n",
     "plt.xlabel(\"[pixels]\")\n",
     "plt.ylabel(\"[pixels]\")\n",
     "plt.title(\"Atmosphere PSF\")\n",
@@ -244,12 +244,8 @@
     "#  Mask this square by a circular mask\n",
     "#  Calculate total RMS variance of masked image\n",
     "\n",
-    "# DEBUG\n",
-    "# Phase screen image of known RMS\n",
-    "phase_screen.fill(2)\n",
-    "\n",
     "# Calculate r0 in pixels\n",
-    "r0_p = 8#int(np.round((r0/d_aperture)*nxy))\n",
+    "r0_p = int(np.round((r0/d_aperture)*nxy))\n",
     "r0_p_center = (r0_p-1)/2\n",
     "\n",
     "# Calculate indices to loop over\n",
@@ -269,23 +265,20 @@
     "for y in i_loop:\n",
     "    #Calculate bounds of Y data to be copied\n",
     "    y_bounds = [y,y+r0_p-1]\n",
-    "    \n",
     "    # Loop through x values\n",
     "    for x in i_loop:\n",
     "        x_bounds = [x,x+r0_p-1]\n",
     "\n",
     "        # Mask nearby values to new image\n",
     "        phase_masked = phase_screen[y_bounds[0]:y_bounds[1]+1,x_bounds[0]:x_bounds[1]+1]\n",
-    "        phase_masked = np.multiply(phase_masked,r0_mask)  \n",
-    "        \n",
+    "        phase_masked = np.multiply(phase_masked,r0_mask)          \n",
     "\n",
     "        # Calculate RMS variation of masked image\n",
     "        r0_s = np.power(phase_masked,2)\n",
     "        r0_rms[y,x]=np.power(np.sum(r0_s)/r0_mask_n,0.5)\n",
-    "        #print(r0_rms[y,x])\n",
     "\n",
     "r0_rms_avg = np.mean(r0_rms)\n",
-    "print(r0_rms_avg)\n"
+    "print(r0_rms_avg)"
    ]
   },
   {
